Fixed Header Flicker on Edge/IE Fix - due to nested fixed elems

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,12 +1,3 @@
-section.background {
-    position: absolute;
-    background: #fafafa;
-    width: 100%;
-    min-height: 110vh;
-    margin: 0;
-    overflow: hidden;
-}
-
 .js-logo {
     position: relative;
     display: inline-block;
