--- a/src/styles.css
+++ b/src/styles.css
@@ -33,6 +33,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Playfair Display', serif;
+    height: 105vh;
 }
 
 body::-webkit-scrollbar {
